--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -66,8 +66,8 @@ cover:
 dream:
   enable: true
   showTitle: true
-  title: To do list
-  text: ISSTA, FSE, ASE, ICSE
+  title: 立而望之
+  text: 富强，民主，文明，和谐，自由，平等，公正，法治，爱国，敬业，诚信，友善。
  
 # Whether to display the musics.
 # 是否在首页显示音乐.
@@ -126,7 +126,7 @@ indexbtn:
   enable: false
   name: Github
   icon: fab fa-github-alt
-  url: https://github.com/blinkfox/hexo-theme-matery
+  url: https://github.com/daojuhecheng
 
 # The configurations of the second line of home banner
 # icon/button will not show up if you leave the corresponding socialLink empty
@@ -134,11 +134,11 @@ indexbtn:
 socialLink:
   github:  https://github.com/daojuhecheng
   email: baiyude@tju.edu.com
-  facebook: # https://www.facebook.com/xxx
-  twitter: # https://twitter.com/xxx
-  qq: # 1181062873
+  # facebook: https://www.facebook.com/xxx
+  # twitter: https://twitter.com/xxx
+  # qq: 1181062873
   weibo: https://www.weibo.com/u/5569062920
-  zhihu: # https://www.zhihu.com/xxx
+  # zhihu: https://www.zhihu.com/xxx
   rss: false # true、false
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
@@ -169,7 +169,7 @@ reward:
 # minCharNumber: Approve copyright information by copying at least how many characters.
 # 是否激活复制文章时追加博客和作者的版权信息.
 copyright:
-  enable: false
+  enable: true
   minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
   description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
 
@@ -260,9 +260,9 @@ mySkills:
 myGallery:
   enable: true
   data:
-    - /medias/featureimages/0.jpg
-    - /medias/featureimages/1.jpg
-    - /medias/featureimages/2.jpg
+    - /medias/featureimages/24.jpg
+    - /medias/featureimages/15.jpg
+    - /medias/featureimages/25.jpg
 
 # Whether to display post-calender in the `archive` page
 # 设置在归档页面中是否显示'文章日历'控件
@@ -466,6 +466,8 @@ featureImages:
 - /medias/featureimages/21.jpg
 - /medias/featureimages/22.jpg
 - /medias/featureimages/23.jpg
+- /medias/featureimages/24.jpg
+- /medias/featureimages/25.jpg
 
 # default configs that the default policy for every articles/posts
 # default 配置文章的默认转载规则
@@ -525,7 +527,7 @@ ribbon_dynamic:
 # 支持顺序，可选项目为twitter, facebook, google, qq, qzone, wechat, weibo, douban, linkedin.
 sharejs:
   enable: true
-  sites: twitter,facebook,linkedin,qq,qzone,wechat,weibo
+  sites: twitter,facebook,wechat,weibo
 
 # addthis文章分享模块.
 addthis:
@@ -543,6 +545,9 @@ subtitle:
   backSpeed: 50 # 删除速度
   sub1: 去年高摘斗轻盈。
   sub2: 入淮清洛渐漫漫。
+  sub3: 一生郁郁试春袍。
+  sub4: 井底微阳回未回。
+  sub5: 轻罗小扇扑流萤。
 
 # 手机二级菜单.
 navMenu:
