--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -66,7 +66,7 @@ cover:
 dream:
   enable: true
   showTitle: true
-  title: 立而望之
+  title: 不疾言，不亲指
   text: 富强，民主，文明，和谐，自由，平等，公正，法治，爱国，敬业，诚信，友善。
  
 # Whether to display the musics.
