--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ highlight:
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
   theme: 'tomorrow'
+  # theme: 'pojoaque'
   line_number: true    # default false
   custom_css:
 
