--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ future: true
 highlight:
   enable: false
 prism_plugin:
+  enable: true
+  preprocess: true
   mode: 'preprocess'    # realtime/preprocess
   theme: 'tomorrow'
   # theme: 'pojoaque'
