--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 
+title: Bai
 subtitle: Yude Bai
 description: Ph.D candidate, Tianjin University
 keywords:
