--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Bai
-subtitle: Yude Bai
+subtitle: Bai Yude
 description: Ph.D candidate, Tianjin University
 keywords:
 author: Yude Bai
